--- a/Notebook3.ipynb
+++ b/Notebook3.ipynb
@@ -7,8 +7,7 @@
     "# AI Impact on the Job Market - Notebook 3 (Final)\n",
     "### A visualization report by Ali Powell\n",
     "\n",
-    "Below are the contents of notebook 3. PLEASE EVALUATE MY INFOGRAPHIC USING THE LINK IN THE README, NOT THE IMAGE IN THIS NOTEBOOK. The image in the notebook is a PNG, and the quality is too low.
-See this link for QUALITY VERSION TO VIEW - https://www.canva.com/design/DAG6UN0UuV4/8nI-HYuQjTzwtBOppBTZUw/view?utm_content=DAG6UN0UuV4&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hcb1d3b5e0c"
+    "Below are the contents of notebook 3. PLEASE EVALUATE MY INFOGRAPHIC USING THE LINK IN THE README, NOT THE IMAGE IN THIS NOTEBOOK. The image in the notebook is a PNG, and the quality is too low. For quality view to evaluate, use this link - https://www.canva.com/design/DAG6UN0UuV4/8nI-HYuQjTzwtBOppBTZUw/view?utm_content=DAG6UN0UuV4&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hcb1d3b5e0c"
    ]
   },
   {
